fix: use correct format specifier in BenchmarkAggregatorFrame
(cherry picked from commit d498ee9a514a79442291972bfd0fbe43ef32608e)